test/bad/t0028.zls
(*
  An init with a dummy pattern does not make any sense. It should be rejected
  with an error message.
*)

let node f () =
  let rec init _ = open_out "test.log" in
  ()

